refactor(backend): standardize API responses and Lombok annotations across backend