@@ -4,14 +4,14 @@ import com.cpclub.backend.dto.UpdateHandleRequest;
 import com.cpclub.backend.dto.UserProfileUpdateRequest;
 import com.cpclub.backend.dto.UserResponseDto;
 import com.cpclub.backend.entity.User;
+import com.cpclub.backend.exception.ResourceNotFoundException;
 import com.cpclub.backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,12 +24,12 @@ public class UserService {
         return userRepository.findAll()
                 .stream()
                 .map(UserResponseDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UserResponseDto getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
         return UserResponseDto.fromEntity(user);
     }
 
@@ -37,13 +37,13 @@ public class UserService {
         return userRepository.findAllByOrderByRatingDesc()
                 .stream()
                 .map(UserResponseDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public UserResponseDto updateCodeforcesHandle(Long id, UpdateHandleRequest request) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
         user.setCodeforcesHandle(request.getCodeforcesHandle().trim());
         User updatedUser = userRepository.save(user);
@@ -53,7 +53,7 @@ public class UserService {
     @Transactional
     public UserResponseDto updateUserProfile(Long id, UserProfileUpdateRequest request) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
         if (request.getName() != null && !request.getName().isBlank()) {
             user.setName(request.getName().trim());
